remove old slides

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
 <!-- 1- clone decktape -->
-<!-- cd ~/Github/decktape -->
+<!-- 2- do wherever the repo is locally cd ~/Github/decktape -->
 <!-- ./bin/phantomjs decktape.js -s 1600x900 file:///Users/KevCaz/Dropbox/grenoble2017/grenoble.html#1 /Users/KevCaz/Dropbox/grenoble2017/grenoble.pdf -->
 
 
@@ -315,9 +315,6 @@
 
 
 
-
-
-
     ---
     name: style2
     layout: true
@@ -422,11 +419,15 @@
 
     Addidtionnaly to the math ;omits I was quite unsatified
     because of the arbitrary of the model
-    wonder a new set of quetsioj
+    wonder a new set of questions:
 
 
+      1- how food web are constraints by energetic
 
+      - structure
+      - stability
 
+      2- how spatial processes influence (MVP / MArea)
 
 
 
@@ -440,9 +441,9 @@
     layout: true
     class: center, middle, style2
     ---
-    # Perspectives
+    # How ETIB could be useful
     <hr />
-    ### Why this could be useful?
+    ### Concluding remarks and perspectives
 
 
     ---
@@ -451,309 +452,14 @@
     class: style1
 
     ---
-    # Co-occurrence and biotic interactions
+    # What predictions?
     <hr/><br/>
 
-    .center[![:scale 100%](img/figcooc1.png)]
-
-
-
-
-
+    What scale is useful?
+    Evolution rate?
+    Hatton paper
 
     ---
-    # Kopelke *et al*, submitted, *Ecology*
-    <hr/>
-
-    .column[
-      .center[![:scale 87%](img/mapsal1.png)]
-    ]
-
-    .column[
-      .center[![:scale 25%](./img/cool.png)]
-    ]
-
-    ???
-    mettre les noms
-
-
-    ---
-    # Kopelke *et al*, submitted, *Ecology*
-    <hr/>
-
-    .column[
-      .center[![:scale 87%](img/mapsal2.png)]
-    ]
-
-    .column[
-      .center[![:scale 25%](./img/cool.png)]
-    ]
-
-    ???
-    symphyte / ovipositeur
-
-
-    ---
-    # Three levels networks
-    <hr/><br/>
-
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-    # 52 &nbsp; &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i>  &nbsp; &nbsp; 96  &nbsp; &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i>  &nbsp; &nbsp; 126 &nbsp; &nbsp; species
-
-    --
-    <br/>
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-
-    --
-    # Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-
-
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG0.png)
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG1.png)
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG2.png)
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG3.png)
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG4.png)
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler
-    <hr/><br/>
-
-    ![:scale 100%](img/figSG5.png)
-
-
-    ---
-    # Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-    <hr/><br/>
-    ![:scale 100%](img/figGP5.png)
-
-
-    ---
-    # Co-occurrence and shortest path
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figsht3.png)]
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-    <hr/>
-
-    .center[![:scale 53%](img/figSG5.png)]
-    .center[![:scale 53%](img/figGP5.png)]
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-    <hr/>
-
-    .center[![:scale 53%](img/figSG6.png)]
-    .center[![:scale 53%](img/figGP6.png)]
-
-    ---
-    # Willow <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Galler *vs* Galler <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Parasitoids
-    <hr/>
-
-    .center[![:scale 53%](img/figSG7.png)]
-    .center[![:scale 53%](img/figGP7.png)]
-
-    ---
-    # Co-occurrence and degree
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figdeg3.png)]
-
-
-
-    ---
-    # Conclusion
-    <hr/><br/>
-
-    ## Shortest path <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-
-    --
-    ## Degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-
-    --
-    ## Using empirical data sets.
-
-
-
-    --
-    <br/><br/><br/><br/><br/>
-    ### .right[Cazelles *et al*, 2017, *in prep*]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    ---
-    name: style2
-    layout: true
-    class: center, middle, style2
-    ---
-    # Concluding remarks and perspectives
-    <hr/>
-    ### Towards better predictions?
-
-
-    ---
-    name: style1
-    layout: true
-    class: style1
-    ---
-
-    # Answers
-    <hr/><br/>
-
-    ## 1. How to integrate biotic interactions into distribution models?
-
-    --
-    ### `\( \Longrightarrow \)` Network distribution models (NDMs)
-
-    ---
-    # Answers
-    <hr/><br/>
-
-    ## 2. How the properties of ecological networks influence co-occurrence?
-    --
-
-    ### `\( \Longrightarrow \)` shortest path <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-    ### `\( \Longrightarrow \)` degree <i class="fa fa-long-arrow-up" aria-hidden="true"></i> &nbsp;&nbsp; `\( \Longrightarrow \)` &nbsp;&nbsp; detection <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-
-    ---
-    # Answers
-    <hr/><br/>
-
-    ## 3. Can we infer interactions from co-occurrence?
-    --
-
-    ### `\( \Longrightarrow \)` depends on the network properties
-
-    --
-
-    ### `\( \Longrightarrow \)` depends on the spatial scale (literature)
-
-    ???
-    variations des interactions
-
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC1.png)]
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC2.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC3.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC4.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC5.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC6.png)]
-
-
-    ---
-    # Using species as predictors?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figAUC7.png)]
-
-
-    ---
-    # What do we really integrate?
-    <hr/>
-
-    .center[![:scale 90%](img/figshtenv2.png)]
-
-    --
-
-    ## .center[INTERDEPENDENCY]
-
-
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    ## Better than JSDMs? (more information)
-
-    --
-
-    ## Network Distribution Models (NDMs)
-
-    --
-
-    <br/>
-
-    ## Network `\(W\)`, abiotic variable(s) `\(E\)`
-
-    --
-
-    <br/>
-
     ## How to predict interactions?
 
     ---
@@ -801,7 +507,7 @@
 
     ## WWF, Living Planet Report 2016 [<i class="fa fa-globe" aria-hidden="true"></i>](http://awsassets.wwf.ca/downloads/wwf_living_planet_report_2016___risk_and_resilience_in_a_new_era.pdf)
 
-    >  If current trends continue to 2020
+    > If current trends continue to 2020
     > vertebrate populations may decline by an
     > average of 67 per cent compared to 1970.
 
@@ -828,256 +534,9 @@
     layout: true
     class: center, middle, style2
     ---
-    # THANK YOU
+    # END
     <hr />
-    ### Merci
-
-    ---
-    name: style1
-    layout: true
-    class: center, style1
-
-    ---
-
-    ---
-    ## Figure 1
-    <br/>
-    ![:scale 64%](./figsup/figintro1.png)
-
-    ---
-    ## Figure 2
-    <br/>
-    ![:scale 100%](./figsup/figintro2.png)
-
-    ---
-    ## Figure 3
-    <br/>
-    ![:scale 100%](./figsup/figch11.png)
-
-    ---
-    ## Figure 4
-    <br/>
-    ![:scale 68%](./figsup/figch12.png)
-
-    ---
-    ## Figure 5
-    <br/>
-    ![:scale 68%](./figsup/figch13.png)
-
-    ---
-    ## Figure 6
-    <br/>
-    ![:scale 100%](./figsup/figch14.png)
-
-    ---
-    ## Figure 7
-    <br/><br/><br/>
-    ![:scale 100%](./figsup/figch15.png)
-
-    ---
-    ## Figure 8
-    <br/><br/><br/>
-    ![:scale 100%](./figsup/figch21.png)
-
-
-    ---
-    ## Figure 9
-    <br/>
-    ![:scale 80%](./figsup/figch31.png)
-
-
-    ---
-    ## Figure 10
-    <br/>
-    ![:scale 100%](./figsup/figch32.png)
-
-    ---
-    ## Figure 11
-    ![:scale 67%](./figsup/figch33.png)
-
-    ---
-    ## Figure 12
-    ![:scale 50%](./figsup/figch34.png)
-
-    ---
-    ## Figure 13
-    <br/>
-    ![:scale 40%](./figsup/figch35.png)
-
-    ---
-    ## Figure 14
-    ![:scale 32%](./figsup/figch36.png)
-
-    ---
-    ## Figure 15
-    <br/>
-    .column[![:scale 74%](./figsup/figch37a.png)]
-    .column[![:scale 74%](./figsup/figch37b.png)]
-
-    ---
-    ## Figure 16
-    <br/>
-    ![:scale 70%](./figsup/figch38.png)
-
-    ---
-    ## Figure 17
-    <br/><br/><br/>
-    ![:scale 100%](./figsup/figch39.png)
-
-    ---
-    ## Figure 18
-    ![:scale 80%](./figsup/figch310.png)
-
-    ---
-    ## Figure 19
-    ![:scale 70%](./figsup/figch311.png)
-
-    ---
-    ## Figure 21
-    ![:scale 64%](./figsup/figch312.png)
-
-    ---
-    ## Figure 21
-    <br/>
-    ![:scale 48%](./figsup/figch313.png)
-
-    ---
-    ## Figure 22
-    <br/>
-
-    .column[
-      ![:scale 60%](./figsup/figch41a.png)
-    ]
-    .column[
-      ![:scale 32%](./figsup/figch41b.png)
-      ![:scale 32%](./figsup/figch41c.png)
-    ]
-
-    ---
-    ## Figure 23
-    <br/>
-
-    ![:scale 70%](./figsup/figch42.png)
-
-
-    ---
-    ## Figure 24
-    <br/>
-
-    ![:scale 73%](./figsup/figch43.png)
-
-    ---
-    ## Figure 25
-
-    ![:scale 64%](./figsup/figch44.png)
-
-
-    ---
-    name: style1
-    layout: true
-    class: style1
-
-    ---
-    # Phylopic
-    <hr/><br/>
-
-    - Silhouette image found on [Phylopic](http://phylopic.org/about/)
-
-    - Silouhette [Ichneumonidae](http://phylopic.org/name/07b2fc56-3489-4007-904b-1a0904ea2647) ; credit Melissa Broussard.
-
-    ---
-    count:false
-    # Salix data set
-    <hr/>
-    ### Species on slides 120-121:
-
-    1- Female of *Euura lapponica* ovipositing on *Salix lapponum* ;
-
-    2- leaf midrib pea gall induced by *Pontania norvegica* on *Salix borealis* ;
-
-    3-  Larva of *Pontania pustulator* insid1
-    e opened leaf midrib bean gall on *Salix phylicifolia* ;
-
-    <br/>
-
-    > 641 site-visits over 29 years, and on 165,424 galls representing 96 herbivore
-    > nodes and 52 plant nodes. The dissections and rearings yielded 42,129 natural
-    > enemies belonging to 126 species
-
-
-
-    ---
-    name: style1
-    layout: true
-    class: style1
-
-    ---
-    count:false
-    # Null models
-    <hr/><br/>
-    --
-
-    ### Since 1970 (following Diamond's paper)
-
-    ### Connor et al., 2013, Ecology.
-
-    <br/>
-
-    --
-
-    ### Pattern-generating models based on randomization of ecological data
-    ### Some elements are fixed, others vary randomly.
-
-    ---
-    count:false
-    # Null models
-    <hr/><br/>
-
-    ### What would be expected in the absence of a given mechanism?
-
-    <br/>
-    ### Detection of pattern in binary presence–absence matrices.
-
-
-    ---
-    count: false
-    # Ulrich & Gotelli, 2013, *Oikos*
-    <hr/><br/>
-
-    ## Test 15 indices.
-
-    <br/>
-
-    .center[![:scale 74%](./figsup/co-occu.png)]
-
-
-
-    ---
-    count: false
-    # Null models
-    <hr/><br/>
-
-    > Null models of species associations should, thus, be used only to reveal the structure of co-occurrence data.
-
-    ## Difficult to assign to a particular process
-
-    ---
-    count:false
-    # MacArthur and Wilson Limits
-    <hr/><br/>
-
-    ## Releasing the assumption of a constant pool of species is a KEY
-
-    --
-    ## Very challenging though:
-    ### - very large pool of species
-    ### - abondances (metapopulations)
-    ### - evolutionnary process
-
-    <br/>
-    --
-
-    ## All solutions increase the complexity.
+    ### thank you
 
 
 
