tune color first slides

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title> Towards an energetic theory of island biogeography </title>
+  <title> Toward an energetic theory of island biogeography </title>
   <meta charset="utf-8">
 
 
@@ -82,7 +82,7 @@
   }
 
   .small{
-    font-size: .87em;
+    font-size: .92em;
   }
 
   .alert{
@@ -123,12 +123,14 @@
   }
 
   .style1 {
-    background: #232323;
+    background: #212121;
     color: #fff;
     text-shadow: 0 0 2px #333;
   }
+
   .style1 h1, .style1 h2 {
     color: #fff;
+    font-size: 1.8em;
   }
 
   .style1 a {
@@ -145,7 +147,7 @@
 
   .style2 {
     background: #545454;
-    color: #232323;
+    color: #212121;
   }
   .style2 h1, .style2 h2 {
     color: #fff;
@@ -159,7 +161,7 @@
   }
 
   .style2 a {
-    color: #232323;
+    color: #212121;
   }
 
   </style>
@@ -182,16 +184,19 @@
     class: center, middle, style1
     ---
 
-    <br/>
 
-    # TOWARDS AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY
+    # TOWARD AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY
 
     <br/><br/>
     ### BSE Annual Meeting - December 14, 2017
 
     <br>
 
-    ### .left[[Kevin Cazelles](http://kevincazelles.fr) &nbsp;&nbsp; [<i class="fa fa-github" aria-hidden="true"></i>](https://github.com/KevCaz/talkBES2017)]
+    ### .left[[Kevin Cazelles](http://kevincazelles.fr)]
+
+    ### .left[<i class="fa fa-github" aria-hidden="true"></i> .small[[https://github.com/KevCaz/talkBES2017](https://github.com/KevCaz/talkBES2017)]]
+
+    <br>
 
     .right[[inSileco](https://inSileco.github.io/)]
     <img src="img/inSilecoLogo.png" height="120" align="right" style="padding:8px"/>
@@ -217,7 +222,56 @@
     layout: true
     class: style1
     ---
-    # A truism
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall3.png)]
+
+    ---
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall4.png)]
+
+    ---
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall5.png)]
+
+    ---
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall6.png)]
+
+    ---
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall7.png)]
+
+    ---
+    # Biogeography: processes
+    <hr/>
+    .center[![:scale 100%](img/figall8.png)]
+
+    ---
+    # Factors influencing species distributions
+    <hr/><br/>
+    ## 1. Historical factors
+    --
+
+    ## 2. Dispersion
+    --
+
+    ## 3. Abiotic variables
+    --
+
+    ## 4. Biotic interactions
+    --
+
+    <br/>
+    # .center[[INTERDEPENDENT]()]
+
+
+    ---
+    # A truism?
     <hr/>
 
     <br><br>
@@ -227,10 +281,11 @@
     is intercepted and circulates in the form of our weather and climatic movements,
     and through animals and plants, before passing off again into space.
 
-    [Elton C., *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
+    [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
 
     ---
-    # A truism
+    # A truism?
+    <hr/>
 
     ## Energy
 
@@ -245,59 +300,18 @@
 
 
     ---
-    # A truism
+    # A truism?
+    <hr/>
 
     .center[![:scale 100%](img/ecoreg.png)]
 
 
-    ---
-    # A set of rules
-    <hr/>
 
-    .center[![:scale 100%](img/figall4.png)]
-
-    ---
-    # A set of rules
-    <hr/>
-
-    .center[![:scale 100%](img/figall5.png)]
-
-    ---
-    # A set of rules
-    <hr/>
-
-    .center[![:scale 100%](img/figall6.png)]
-
-    ---
-    # A set of rules
-    <hr/>
-
-    .center[![:scale 100%](img/figall7.png)]
-
-
-
-    ---
-    # Factors influencing species distributions
-    <hr/><br/>
-    ## 1. Abiotic variables
-    --
-
-    ## 2. Dispersion
-    --
-
-    ## 3. Ecological interactions
-    --
-
-    ## 4. Historical factors
-    --
-
-    <br/>
-
-    # .center[[INTERDEPENDENT]()]
 
 
     ---
     # A challenge: predicting species distributions
+    <hr/>
 
     .center[![:scale 95%](img/figdem7.png)]
 
@@ -322,7 +336,7 @@
     ---
     # Building an Energetic TIB (a continuer)
     <hr />
-    ### How energy constrain species distribution?
+    ### How energy constrains species distribution?
 
 
     ---
@@ -345,47 +359,29 @@
     <hr/><br/>
     .center[![:scale 100%](img/figMW8.png)]
 
-
-
-
-
-    ---
-    # Model properties
-    <hr/><br/>
-
-    ## 1. Colonisation/extinction dynamics
-    --
-
-    <br/>
-    ## 2. Equilibrium
-    --
-
-    <br/>
-    ## 3. Elegant, easy to expand
-    --
-
-    <br/>
-    ## 4. Biotic and abiotic constraints are missing
-
     ???
-    Attention, ça marche bien... et très utilisé
+    Powerful vision but strong assumption
+
 
 
     ---
-    # Assumption of independence released
+    # Species are not Independent
     <hr/><br/>
 
     --
-    ## Gravel *et al*, 2011, *Ecology Letters*
+    ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](http://jeb.biologists.org/content/2/1/119)
+    <br>
 
     --
-    ### 1. Island without prey = no predator colonisation
-    ### 2. Predator without prey = extinction
-    <br/>
+    ### [Gravel *et al.*, *Ecology Letters*, 2011.](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
+    <br>
 
     --
-    ### .right[Cazelles *et al*, 2016, [*Ecography*.](http://doi.org/10.1111/ecog.01714)]
+    ### [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)
+    <br>
 
+    --
+    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004).
 
 
     ???
