structure of the pres completed /add context slides

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     ### .left[[Kevin Cazelles](http://kevincazelles.fr)]
 
-    ### .left[<i class="fa fa-github" aria-hidden="true"></i> .small[[https://github.com/KevCaz/talkBES2017](https://github.com/KevCaz/talkBES2017)]]
+    ### .left[![:fontawe](github) .small[[https://github.com/KevCaz/talkBES2017](https://github.com/KevCaz/talkBES2017)]]
 
     <br>
 
@@ -214,7 +214,7 @@
     ---
     # CONTEXT
     <hr/>
-    ### Why?
+    ### Biogeography: process and patterns
 
 
     ---
@@ -269,51 +269,38 @@
     <br/>
     # .center[[INTERDEPENDENT]()]
 
-
     ---
-    # A truism?
-    <hr/>
-
-    <br><br>
-
-    > The ultimate source of nearly all the income of energy which the earth receives
-    is the sun. From it we get a continual stream of radiant energy, part of which
-    is intercepted and circulates in the form of our weather and climatic movements,
-    and through animals and plants, before passing off again into space.
-
-    [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
-
-    ---
-    # A truism?
-    <hr/>
-
-    ## Energy
-
-    --
-    ### 1- Solar radiation
-
-    --
-    ### 2- Water availibility
-
-    --
-    ### 3- Nutrients availibility
-
-
-    ---
-    # A truism?
+    # Biogeography: patterns
     <hr/>
 
     .center[![:scale 100%](img/ecoreg.png)]
 
 
-
-
-
     ---
-    # A challenge: predicting species distributions
-    <hr/>
+    # Biogeography: questions
+    <hr/><br/>
 
-    .center[![:scale 95%](img/figdem7.png)]
+    --
+    ### How processes generate patterns?
+    ### How to infer processes from patterns?
+
+    <br>
+
+    --
+    ### How interactions influence species distributions?
+    ### How to infer the role of biotic interactions from co-occurrence?
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -334,10 +321,9 @@
     layout: true
     class: center, middle, style2
     ---
-    # Building an Energetic TIB (a continuer)
+    # Biogeography of networks
     <hr />
-    ### How energy constrains species distribution?
-
+    ### Integrating species interactions
 
     ---
     name: style1
@@ -369,7 +355,7 @@
     <hr/><br/>
 
     --
-    ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](http://jeb.biologists.org/content/2/1/119)
+    ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
     <br>
 
     --
@@ -381,7 +367,7 @@
     <br>
 
     --
-    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004).
+    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004)
 
 
     ???
@@ -389,20 +375,26 @@
 
 
     ---
-    # Networks within the TIB
+    # Networks and TIB
     <hr/><br/>
 
-    .center[![:scale 100%](img/figeco1.png)]
+    .center[![:scale 100%](img/figeco3.png)]
 
 
     ---
-    # Network in the TIB
+    # Networks and TIB
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco3.png)]
 
     ---
-    # Network in the TIB
+    # Networks and TIB
+    <hr/><br/>
+
+    .center[![:scale 100%](img/figeco5.png)]
+
+    ---
+    # Network and TIB
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco7.png)]
@@ -411,22 +403,112 @@
 
     ---
     # Limits
+    <hr/><br/>
+
+    ## Quite promising but:
+
+    <br>
+
+    --
+    ###  1- still some arbitrary rules
+
+    --
+    ###  2- results depend on the networks
+
+
+    ---
+    # New sets of questions
+    <hr/><br/>
+
+    ## **What** is predictable?
+    <br>
+
+    <!-- why not putting Hatton paper here? -->
+
+    ## How energy constrain community?
+
+    <!-- Stability / MVP and population cosumption -->
+    <!-- May the probability of max trophic length is easier than exact composition -->
+    <!-- Maybe a given composition of species -->
+
+
+    ---
+    name: style2
+    layout: true
+    class: center, middle, style2
+    ---
+    # Building an Energetic Theory of Island Biogeography
+    <hr />
+    ### A key to integrate them all
+
+
+    ---
+    name: style1
+    layout: true
+    class: style1
+
+    ---
+    # A truism?
+    <hr/><br><br>
+
+    > The ultimate source of nearly all the income of energy which the earth receives
+    is the sun. From it we get a continual stream of radiant energy, part of which
+    is intercepted and circulates in the form of our weather and climatic movements,
+    and through animals and plants, before passing off again into space.
+
+    [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
+
+    ---
+    # A truism?
+    <hr/><br>
+
+    ## Energy
+
+    --
+    ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
+
+    --
+    ### 2- Carbon source
+
+    --
+    ### [Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs](#)
+    <br>
+
+    --
+    ### 3- Water availibility
+
+    --
+    ### 4- Nutrients availibility
+
+    ---
+    # A truism?
     <hr/>
 
-    Addidtionnaly to the math ;omits I was quite unsatified
-    because of the arbitrary of the model
-    wonder a new set of questions:
+    .center[![:scale 100%](img/ecoreg.png)]
+
+    ---
+    # Model principle
+    <hr/><br>
+
+    ## TTIB
+
+    ## MVP
+
+    ## Cost of a community
 
 
-      1- how food web are constraints by energetic
-
-      - structure
-      - stability
-
-      2- how spatial processes influence (MVP / MArea)
+    ---
+    # Cost of a community
+    <hr/>
 
 
+    ---
+    # Results 1/2
+    <hr/>
 
+    ---
+    # Results 2/2
+    <hr/>
 
 
 
@@ -437,7 +519,7 @@
     layout: true
     class: center, middle, style2
     ---
-    # How ETIB could be useful
+    # How ETIB could be useful?
     <hr />
     ### Concluding remarks and perspectives
 
@@ -446,69 +528,23 @@
     name: style1
     layout: true
     class: style1
-
     ---
-    # What predictions?
-    <hr/><br/>
+    # A challenge: predicting species distributions
+    <hr/>
 
-    What scale is useful?
-    Evolution rate?
-    Hatton paper
-
-    ---
-    ## How to predict interactions?
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figLast1.png)]
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figLast2.png)]
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figLast3.png)]
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figLast4.png)]
-
-    ---
-    # Towards mechanistic NDMs?
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figLast5.png)]
+    .center[![:scale 95%](img/figdem7.png)]
 
 
 
     ---
     # Urgently needed
-    <hr/><br/>
-
-    ## Interactions ++  <i class="fa fa-long-arrow-right" aria-hidden="true"></i> predictions easier
-
-    ### Berlow *et al*, 2009, *PNAS*
-    --
-
-    <br/>
+    <hr/> <br/> <br>
 
     ## WWF, Living Planet Report 2016 [<i class="fa fa-globe" aria-hidden="true"></i>](http://awsassets.wwf.ca/downloads/wwf_living_planet_report_2016___risk_and_resilience_in_a_new_era.pdf)
 
     > If current trends continue to 2020
     > vertebrate populations may decline by an
     > average of 67 per cent compared to 1970.
-
-
-
 
 
 
@@ -543,10 +579,23 @@
   <script type="text/javascript">
 
     // Macros
+    // scale image
     remark.macros.scale = function (percentage) {
       var url = this;
       return '<img src="' + url + '" style="width: ' + percentage + '" />';
     };
+    // font-awesome
+    remark.macros.fontawe = function (size = 2) {
+      var name = this;
+      return '<i class="fa fa-'+ name + ' fa-'+ size + 'x" aria-hidden="true"></i>';
+    };
+    // toupper (see https://github.com/gnab/remark/issues/72)
+    remark.macros.upper = function () {
+      // `this` is the value in the parenthesis, or undefined if left out
+      return this.toUpperCase();
+    };
+
+
     var slideshow = remark.create({
       ratio: "4:3",
       // ratio: "16:9",
