add first set of slides to explain cost of network

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   @import url('https://fonts.googleapis.com/css?family=Anton|Bangers|Rubik+Mono+One');
   /*<link href="https://fonts.googleapis.com/css?family=Bungee|Candal|Passion+One" rel="stylesheet">*/
   @import url('https://fonts.googleapis.com/css?family=Arya');
+
   body {
     font-family: 'Arya';
     /*font-family: 'Marmelad', sans-serif;*/
@@ -154,6 +155,10 @@
     line-height: 1em;
     font-size: 2.2em;
   }
+
+  /*.style2 h2 {
+    font-family: 'Luckiest Guy';
+  }*/
 
   .style2 h3 {
     padding-left: 0em;
@@ -405,7 +410,7 @@
     # Limits
     <hr/><br/>
 
-    ## Quite promising but:
+    ## Promising avenue, however:
 
     <br>
 
@@ -490,16 +495,58 @@
     # Model principle
     <hr/><br>
 
-    ## TTIB
+    ## Trophic Theory of Island Biogeography
 
-    ## MVP
+    ## Minimum viable population
 
     ## Cost of a community
 
+    ## Extinctions
+
 
     ---
-    # Cost of a community
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg1.png)]
+
+    ---
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg2.png)]
+
+    ---
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg3.png)]
+
+    ---
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg4.png)]
+
+    ---
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg5.png)]
+
+    ---
+    # Energy cost of a network on an island
+    <hr/><br>
+
+    .center[![:scale 50%](img/netenerg6.png)]
+
+
+
+    ---
+    # Cost of a community on an island
     <hr/>
+
+    <!-- figure woth the network -->
 
 
     ---
@@ -566,10 +613,9 @@
     layout: true
     class: center, middle, style2
     ---
-    # END
-    <hr />
-    ### thank you
+    # The end
 
+    <!-- for the sake of doing something funny let's chnage the font -->
 
 
   </textarea>
