--- a/index.html
+++ b/index.html
@@ -256,23 +256,19 @@
     <hr/>
     .center[![:scale 100%](img/figall8.png)]
 
-    ---
+    <!-- ---
     # Factors influencing species distributions
     <hr/><br/>
     ## 1. Historical factors
     --
-
     ## 2. Dispersion
     --
-
     ## 3. Abiotic variables
     --
-
     ## 4. Biotic interactions
     --
-
     <br/>
-    # .center[[INTERDEPENDENT]()]
+    # .center[[INTERDEPENDENT]()] -->
 
     ---
     # Biogeography: patterns
@@ -320,15 +316,14 @@
 
 
 
-
     ---
     name: style2
     layout: true
     class: center, middle, style2
     ---
-    # Biogeography of networks
+    # Biogeography & biotic interaction networks
     <hr />
-    ### Integrating species interactions
+    ### Integrating ecological network
 
     ---
     name: style1
@@ -341,12 +336,12 @@
     .center[![:scale 100%](img/figMW5.png)]
 
     ---
-    # MacArthur et Wilson (1963, 1967)
+    # MacArthur et Wilson (TIB; 1963, 1967)
     <hr/><br/>
     .center[![:scale 100%](img/figMW6.png)]
 
     ---
-    # MacArthur et Wilson (1963, 1967)
+    # MacArthur et Wilson (TIB; 1963, 1967)
     <hr/><br/>
     .center[![:scale 100%](img/figMW8.png)]
 
@@ -399,7 +394,7 @@
     .center[![:scale 100%](img/figeco5.png)]
 
     ---
-    # Network and TIB
+    # Networks and TIB
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco7.png)]
@@ -418,7 +413,7 @@
     ###  1- still some arbitrary rules
 
     --
-    ###  2- results depend on the networks
+    ###  2- results depend on the input network
 
 
     ---
@@ -428,7 +423,11 @@
     ## **What** is predictable?
     <br>
 
+    - a specific set of species
+    - a given topology
     <!-- why not putting Hatton paper here? -->
+
+    --
 
     ## How energy constrain community?
 
@@ -508,37 +507,37 @@
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg1.png)]
+    .center[![:scale 45%](img/netenerg1.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg2.png)]
+    .center[![:scale 45%](img/netenerg2.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg3.png)]
+    .center[![:scale 45%](img/netenerg3.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg4.png)]
+    .center[![:scale 45%](img/netenerg4.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg5.png)]
+    .center[![:scale 45%](img/netenerg5.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 50%](img/netenerg6.png)]
+    .center[![:scale 45%](img/netenerg6.png)]
 
 
 
@@ -546,16 +545,56 @@
     # Cost of a community on an island
     <hr/>
 
-    <!-- figure woth the network -->
+    .center[![:scale 75%](img/motifcost1.png)]
+
+    ---
+    # Cost of a community on an island
+    <hr/>
+
+    .center[![:scale 75%](img/motifcost2.png)]
+
+    ---
+    # Cost of a community on an island
+    <hr/>
+
+    .center[![:scale 75%](img/motifcost3.png)]
+
+
+    ---
+    # Model
+    <hr/><br>
+
+
+    ## Metaweb
+
+    ## Colonisation process
+
+    ## Energy cost to determine
+
+    ### 1- Random
+
+    ### 2- Higher the cost remove
+
+
+    ---
+    # SAR becomes EAR
+    <hr/>
+
+    classical add paper
+
 
 
     ---
     # Results 1/2
     <hr/>
 
+    <!-- contrast random and non randon scenarios -->
+
     ---
     # Results 2/2
     <hr/>
+
+
 
 
 
@@ -570,17 +609,33 @@
     <hr />
     ### Concluding remarks and perspectives
 
-
     ---
     name: style1
     layout: true
     class: style1
     ---
+    # A short answer
+    <hr/><br>
+
+    --
+    ## Improve integration of processes
+
+    --
+    ## Better understand what patterns say
+
+
+    ---
+    # Hatton
+    <hr/><br>
+
+    ## Relationship between mass of predator and prey at large scale
+
+
+    ---
     # A challenge: predicting species distributions
     <hr/>
 
     .center[![:scale 95%](img/figdem7.png)]
-
 
 
     ---
@@ -592,18 +647,6 @@
     > If current trends continue to 2020
     > vertebrate populations may decline by an
     > average of 67 per cent compared to 1970.
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
