add concluding remarks

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     ---
     # CONTEXT
     <hr/>
-    ### Biogeography: process and patterns
+    ### Biogeography: processes and distributions
 
 
     ---
@@ -256,22 +256,14 @@
     <hr/>
     .center[![:scale 100%](img/figall8.png)]
 
-    <!-- ---
-    # Factors influencing species distributions
-    <hr/><br/>
-    ## 1. Historical factors
-    --
-    ## 2. Dispersion
-    --
-    ## 3. Abiotic variables
-    --
-    ## 4. Biotic interactions
-    --
-    <br/>
-    # .center[[INTERDEPENDENT]()] -->
+    ---
+    # Biogeography: distributions
+    <hr/>
+    .center[![:scale 100%](img/figall9.png)]
+
 
     ---
-    # Biogeography: patterns
+    # Biogeography: distributions
     <hr/>
 
     .center[![:scale 100%](img/ecoreg.png)]
@@ -282,8 +274,8 @@
     <hr/><br/>
 
     --
-    ### How processes generate patterns?
-    ### How to infer processes from patterns?
+    ### How processes generate distributions?
+    ### How to infer processes from distributions?
 
     <br>
 
@@ -331,17 +323,17 @@
     class: style1
 
     ---
-    # MacArthur et Wilson (1963, 1967)
+    # Theory of Island Biogeography (TIB ; 1963)
     <hr/><br/>
     .center[![:scale 100%](img/figMW5.png)]
 
     ---
-    # MacArthur et Wilson (TIB; 1963, 1967)
+    # Theory of Island Biogeography (TIB ; 1963)
     <hr/><br/>
     .center[![:scale 100%](img/figMW6.png)]
 
     ---
-    # MacArthur et Wilson (TIB; 1963, 1967)
+    # Theory of Island Biogeography (TIB ; 1963)
     <hr/><br/>
     .center[![:scale 100%](img/figMW8.png)]
 
@@ -385,12 +377,6 @@
     # Networks and TIB
     <hr/><br/>
 
-    .center[![:scale 100%](img/figeco3.png)]
-
-    ---
-    # Networks and TIB
-    <hr/><br/>
-
     .center[![:scale 100%](img/figeco5.png)]
 
     ---
@@ -402,34 +388,26 @@
 
 
     ---
-    # Limits
-    <hr/><br/>
+    # New constraints
+    <hr/>
 
-    ## Promising avenue, however:
-
+    ## Interactions affect extinction probability
     <br>
 
     --
-    ###  1- still some arbitrary rules
-
-    --
-    ###  2- results depend on the input network
-
-
-    ---
-    # New sets of questions
-    <hr/><br/>
-
     ## **What** is predictable?
-    <br>
-
-    - a specific set of species
-    - a given topology
-    <!-- why not putting Hatton paper here? -->
 
     --
+    ## **What** are the constraints?
 
-    ## How energy constrain community?
+    --
+    ## Energy constraints community
+
+    ### [Metabolic Theory of Ecology](http://onlinelibrary.wiley.com/doi/10.1890/03-9000/abstract)
+
+    ### [Dynamic Energy Budget](http://www.bio.vu.nl/thb/deb/index.html)
+
+
 
     <!-- Stability / MVP and population cosumption -->
     <!-- May the probability of max trophic length is easier than exact composition -->
@@ -470,16 +448,15 @@
 
     --
     ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
+    <br>
 
     --
     ### 2- Carbon source
-
-    --
-    ### [Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs](#)
     <br>
 
     --
     ### 3- Water availibility
+    <br>
 
     --
     ### 4- Nutrients availibility
@@ -496,9 +473,13 @@
 
     ## Trophic Theory of Island Biogeography
 
-    ## Minimum viable population
-
     ## Cost of a community
+
+    ### - Mean energy consumption per individual (MET / DEB)
+
+    ### - Minimal Viable Population (MVP)
+
+    ### - Engery transfer (Φ)
 
     ## Extinctions
 
@@ -564,23 +545,14 @@
     # Model
     <hr/><br>
 
-
-    ## Metaweb
-
-    ## Colonisation process
-
-    ## Energy cost to determine
-
-    ### 1- Random
-
-    ### 2- Higher the cost remove
+    .center[![:scale 100%](img/figeco9.png)]
 
 
     ---
     # SAR becomes EAR
     <hr/>
 
-    classical add paper
+    ### [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
 
 
 
@@ -619,34 +591,29 @@
 
     --
     ## Improve integration of processes
+    <br>
 
     --
-    ## Better understand what patterns say
-
+    ## Better understanding of what distributions say
 
     ---
-    # Hatton
+    # New insights
     <hr/><br>
 
-    ## Relationship between mass of predator and prey at large scale
+    .center[![:scale 85%](img/Hatton.png)]
 
 
     ---
-    # A challenge: predicting species distributions
+    # New insights
+    <hr/><br>
+
+    .center[![:scale 100%](img/ecoreg.png)]
+
+    ---
+    # New insights
     <hr/>
 
     .center[![:scale 95%](img/figdem7.png)]
-
-
-    ---
-    # Urgently needed
-    <hr/> <br/> <br>
-
-    ## WWF, Living Planet Report 2016 [<i class="fa fa-globe" aria-hidden="true"></i>](http://awsassets.wwf.ca/downloads/wwf_living_planet_report_2016___risk_and_resilience_in_a_new_era.pdf)
-
-    > If current trends continue to 2020
-    > vertebrate populations may decline by an
-    > average of 67 per cent compared to 1970.
 
 
 
